reduce interfaces and use generic value interface